compatibility issues with a fadeout element covering the screen in mozilla have to verify safari

--- a/src/Components/AnimatedLogo/AnimatedLogo.css
+++ b/src/Components/AnimatedLogo/AnimatedLogo.css
@@ -58,7 +58,7 @@
         background-color: black;
     }
     70%,100% {
-        background-color: transparent;
         display: none;
+        z-index: -1;
     }
 }
